website/static/css/main_page.css
/*CSS for main page of the website.*/
.welcome_tab {
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    border-style: groove;
    border-radius:10px;
    background-color: rgb(245, 204, 228);

    margin: 10px auto;
    padding: 40px;

    height: auto;
    width: 1000px;
}

.lin_reg_tab {
    text-align: center;

    border-style:groove;
    border-radius: 10px;
    height: auto;
    width: 500px;
    padding-left: 5px;
    background:#7daf98 ;
    float: left;
    margin: 60px;
}

.poly_reg_tab {
    text-align: center;

    border-style:groove;
    border-radius: 10px;
    float: left;
    height: auto;
    padding-left: 5px;
    width: 500px;
    margin: 60px;

    background:#e7de89;
}

.log_reg_tab {
    text-align: center;

    background:#e97a7a ;
    border-radius: 10px;
    border-style: groove;
    float: left;
    height: auto;
    padding-left: 5px;
    width: 500px;
    margin: 60px;
  }

.svm_tab {
    text-align: center;

    background:#a13670 ;
    border-radius: 10px;
    border-style: groove;
    float: left;
    height: auto;
    padding-left: 5px;
    width: 500px;
    margin: 60px;
  }

.neural_tab {
    text-align: center;

    background:#2986cc ;
    border-radius: 10px;
    border-style: groove;
    float: left;
    height: auto;
    padding-left: 5px;
    width: 500px;
    margin: 60px;
  }

